--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ var authorization = {
   inbentaKey:"BeYO7c7eXbGBd5JHMCWUAGoW3z2PbH7wqP85f/pEG2U="
 }
 
- InbentaChatbotSDK.buildWithDomainCredentials(authorization);
+ InbentaChatbotSDK.buildWithDomainCredentials(authorization, config);
 </script>
 <script>
     function build() {
@@ -82,8 +82,8 @@ var authorization = {
     "chatbotId": "62f810336a37b"
 };
         var authorization = {
-            domainKey: 'eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJwcm9qZWN0IjoicGNhbmRlbWlsX2NoYXRib3RfZW4iLCJkb21haW5fa2V5X2lkIjoiQmVZTzdjOFFQdE44ZTRhZml3cHhlZzo6In0.WzXBqLAsUHm2pwqf9Hbs43dzkHcX1TMLq6InwNqwQuX1O6Iai7WanCf1PkhFJ4LR1ZHgKAY58HY7abuEUgWKaw',
-            inbentaKey: 'BeYO7c721GqNxpMk+WDfmutqPahWzr6+iI2mW3gBPEU='
+            domainKey: 'eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJwcm9qZWN0IjoicGNhbmRlbWlsX2NoYXRib3RfZW4iLCJkb21haW5fa2V5X2lkIjoiQmVZbWY1bEIyRVRKSWJZSFF6dlZJQTo6In0.QRb7IpbtUnaNh5OADdhQoIJF9lGjb8wh0EJEaOp25Q7sCK4EZ9OJQGtOOHIuShUewOUsBeBQxmIGCqlQ4JugGA',
+            inbentaKey: 'BeYO7c7eXbGBd5JHMCWUAGoW3z2PbH7wqP85f/pEG2U='
         };
 
         config['adapters'] = [];
